--- a/src/components/shop/shop.component.html
+++ b/src/components/shop/shop.component.html
@@ -1,1 +1,15 @@
-<p>shop works!</p>
+<div class="container mx-auto p-8">
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+  <p>shop works!</p>
+
+</div>
