--- a/src/components/nav-bar/nav-bar.component.html
+++ b/src/components/nav-bar/nav-bar.component.html
@@ -1,42 +1,31 @@
 <header class="d-flex flex-column flex-md-row align-items-center justify-content-between
      p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-  <img src="/assets/images/logo.jpg" style="max-height: 70px;" alt="logo" [routerLink]="['/home']">
-
+  <img src="/assets/images/logo.jpg" style="max-height: 70px;" alt="logo" class="logo" routerLink="/">
   <nav class="my-2 my-md-0 me-md-3 text-uppercase" style="font-size: larger;">
-    <a class="p-2" [routerLink]="['/home']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-    <a class="p-2" [routerLink]="['/shop']" routerLinkActive="active">Shop</a>
-    <a class="p-2" [routerLink]="['/test-error']" routerLinkActive="active">Errors</a>
+    <a class="p-2" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+    <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
+    <a class="p-2" routerLink="/test-error" routerLinkActive="active">Errors</a>
   </nav>
-
   <div class="d-flex align-items-center">
-    <a [routerLink]="['/basket']" class="position-relative">
+    <a routerLink='/basket' class="position-relative">
       <i class="fa fa-shopping-cart fa-2x mr-5 text-orange"></i>
-      <div class="cart-no">
-        <!--*ngIf="basket$ | async as basket" -->
-        <!-- {{ basket.items.length }} -->
-        6
-      </div>
+      <div class="cart-no">6</div>
     </a>
 
-    <ng-container>
-      <!-- *ngIf="(currentUser$ | async) === null" -->
-      <a [routerLink]="['/account/login']" class="btn btn-outline-secondary mr-2">Login</a>
-      <a [routerLink]="['/account/register']" class="btn btn-outline-secondary mr-3">Sign up</a>
+    <ng-container *ngIf="(currentUser$ | async) === null">
+      <a routerLink="/account/login" class="btn btn-outline-secondary mr-2" href="#">Login</a>
+      <a routerLink="/account/register" class="btn btn-outline-secondary mr-3" href="#">Sign up</a>
     </ng-container>
-
-
-
-    <ng-container>
-      <!-- *ngIf="currentUser$ | async as user" -->
-      <div class="dropdown ml-3 mr-5" ngxDropdown>
-        <a class="dropdown-toggle" style="cursor: pointer;" ngxDropdownToggle>
-          <strong>Welcome Ziad Hany</strong>
+    <ng-container *ngIf="(currentUser$ | async) as user">
+      <div class="dropdown ml-3 mr-5" dropdown>
+        <a class="dropdown-toggle" style="cursor: pointer;" dropdownToggle>
+          <strong>Welcome {{(currentUser$ | async)?.displayName}}</strong>
         </a>
-        <div class="dropdown-menu dropdown-menu-right" *ngxDropdownMenu>
-          <a [routerLink]="['/basket']" class="dropdown-item d-flex align-items-center py-2">
+        <div class="dropdown-menu dropdown-menu-right" style="cursor:pointer" *dropdownMenu>
+          <a routerLink="/basket" class="dropdown-item d-flex align-items-center py-2">
             <i class="fa fa-shopping-cart mr-3"></i> View Basket
           </a>
-          <a [routerLink]="['/orders']" class="dropdown-item d-flex align-items-center py-2">
+          <a routerLink="/orders" class="dropdown-item d-flex align-items-center py-2">
             <i class="fa fa-history mr-3"></i> View Orders
           </a>
           <div class="dropdown-divider"></div>
@@ -47,4 +36,5 @@
       </div>
     </ng-container>
   </div>
+
 </header>
