--- a/src/components/not-found/not-found.component.html
+++ b/src/components/not-found/not-found.component.html
@@ -1,1 +1,8 @@
-<p>not-found works!</p>
+<section class="d-flex justify-content-center align-items-center vh-100 text-center p-5">
+  <div class="w-100" style="max-width: 400px;">
+    <h1 class="display-1 text-danger">404</h1>
+    <h2 class="mb-4">Oops! Page not found.</h2>
+    <p class="lead mb-4">The page you're looking for doesn't exist or has been moved.</p>
+    <a routerLink="/home" class="btn-primary btn w-100">Go Back Home</a>
+  </div>
+</section>
