--- a/src/components/test-error/test-error.component.html
+++ b/src/components/test-error/test-error.component.html
@@ -12,7 +12,7 @@
     <div class="mt-4" *ngIf="validationErrors && validationErrors.length > 0">
       <h4 class="text-danger">Validation Errors:</h4>
       <ul class="list-group">
-        <li class="list-group-item list-group-item-danger" *ngFor="let error of validationErrors">
+        <li class="list-group-item list-group-item-danger mt-2 w-25" *ngFor="let error of validationErrors">
           {{ error }}
         </li>
       </ul>
